chore(gm): develop 변경 사항 추가
develop 변경 사항 추가

--- a/backend/heulgit/src/main/resources/templates/chat/roomdetail.html
+++ b/backend/heulgit/src/main/resources/templates/chat/roomdetail.html
@@ -43,7 +43,7 @@
 <script src="/webjars/stomp-websocket/2.3.3-1/stomp.min.js"></script>
 <script>
     // websocket & stomp initialize
-    var sock = new SockJS("/ws-stomp");
+    var sock = new SockJS("/gm");
     var ws = Stomp.over(sock);
     // vue.js
     var vm = new Vue({
@@ -61,28 +61,34 @@
             this.findRoom();
         },
         methods: {
-            findRoom: function() {
-                axios.get('/gm/chats/'+this.roomId).then(response => { this.room = response.data; });
+            findRoom: function () {
+                axios.get('/gm/chats/' + this.roomId).then(response => {
+                    this.room = response.data;
+                });
             },
-            sendMessage: function() {
-                ws.send("/pub/chat/message", {}, JSON.stringify({roomId:this.roomId, sender:this.sender, message:this.message}));
-                console.log(JSON.stringify({roomId:this.roomId, sender:this.sender, message:this.message}))
+            sendMessage: function () {
+                ws.send("/pub/chat/message", {}, JSON.stringify({
+                    roomId: this.roomId,
+                    sender: this.sender,
+                    message: this.message
+                }));
+                console.log(JSON.stringify({roomId: this.roomId, sender: this.sender, message: this.message}))
                 this.message = '';
             },
-            recvMessage: function(recv) {
-                this.messages.unshift({"sender":recv.type=='ENTER'?'[??]':recv.sender,"message":recv.message})
+            recvMessage: function (recv) {
+                this.messages.unshift({"sender": recv.type == 'ENTER' ? '[??]' : recv.sender, "message": recv.message})
             }
         }
     });
     // pub/sub event
-    ws.connect({}, function(frame) {
-        ws.subscribe("/sub/chat/room/"+vm.$data.roomId, function(message) {
+    ws.connect({}, function (frame) {
+        ws.subscribe("/sub/chat/room/" + vm.$data.roomId, function (message) {
             var recv = JSON.parse(message.body);
             vm.recvMessage(recv);
         });
-        ws.send("/pub/chat/message", {}, JSON.stringify({roomId:vm.$data.roomId, sender:vm.$data.sender}));
-    }, function(error) {
-        alert("error "+error);
+        ws.send("/pub/chat/message", {}, JSON.stringify({roomId: vm.$data.roomId, sender: vm.$data.sender}));
+    }, function (error) {
+        alert("error " + error);
     });
 </script>
 </body>
